# rslean

./: Cargo.toml  PLAN.md  README.md  TECH.md
crates/rslean-check/: Cargo.toml
crates/rslean-check/src/: main.rs
crates/rslean-expr/: Cargo.toml
crates/rslean-expr/src/: constant_info.rs  expr.rs  lib.rs  literal.rs
crates/rslean-interp/: Cargo.toml
crates/rslean-interp/src/: builtins.rs  env.rs  error.rs  eval.rs  iota.rs  lib.rs  loader.rs  tests.rs  value.rs
crates/rslean-kernel/: Cargo.toml
crates/rslean-kernel/src/: environment.rs  error.rs  lib.rs  quot.rs  type_checker.rs
crates/rslean-level/: Cargo.toml
crates/rslean-level/src/: level.rs
crates/rslean-lexer/: Cargo.toml
crates/rslean-lexer/src/: keyword.rs  lexer.rs  lib.rs  token.rs
crates/rslean-name/: Cargo.toml
crates/rslean-name/src/: name.rs
crates/rslean-olean/: Cargo.toml
crates/rslean-olean/src/: deserialize.rs  error.rs  header.rs  lib.rs  region.rs
crates/rslean-parser/: Cargo.toml
crates/rslean-parser/src/: command.rs  expr.rs  lib.rs  parser.rs  pratt.rs
crates/rslean-parser/tests/: integration.rs
crates/rslean-syntax/: Cargo.toml
crates/rslean-syntax/src/: lib.rs  node_kind.rs  span.rs  syntax.rs
