[package]
name = "rslean-expr"
version.workspace = true
edition.workspace = true

[dependencies]
rslean-name = { workspace = true }
rslean-level = { workspace = true }
rustc-hash = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
